test/cases/compile_errors/invalid_underscore_placement_in_int_literal-1.zig
fn main() void {
    var bad: u128 = 10_;
    _ = bad;
}

// error
// backend=stage2
// target=native
//
// :2:23: error: trailing digit separator
